--- a/prj/nfhs.vcxproj
+++ b/prj/nfhs.vcxproj
@@ -98,10 +98,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(MsBuildProjectDirectory)\..\source;$(MsBuildProjectDirectory)\..\extern\crow\include;$(MsBuildProjectDirectory)\..\extern\opencv\_build\include;$(MsBuildProjectDirectory)\..\extern\opencv\calib3d\include;$(MsBuildProjectDirectory)\..\extern\opencv\core\include;$(MsBuildProjectDirectory)\..\extern\opencv\dnn\include;$(MsBuildProjectDirectory)\..\extern\opencv\features2d\include;$(MsBuildProjectDirectory)\..\extern\opencv\flann\include;$(MsBuildProjectDirectory)\..\extern\opencv\gapi\include;$(MsBuildProjectDirectory)\..\extern\opencv\highgui\include;$(MsBuildProjectDirectory)\..\extern\opencv\imgcodecs\include;$(MsBuildProjectDirectory)\..\extern\opencv\imgproc\include;$(MsBuildProjectDirectory)\..\extern\opencv\java\include;$(MsBuildProjectDirectory)\..\extern\opencv\js\include;$(MsBuildProjectDirectory)\..\extern\opencv\ml\include;$(MsBuildProjectDirectory)\..\extern\opencv\objc\include;$(MsBuildProjectDirectory)\..\extern\opencv\objdetect\include;$(MsBuildProjectDirectory)\..\extern\opencv\photo\include;$(MsBuildProjectDirectory)\..\extern\opencv\python\include;$(MsBuildProjectDirectory)\..\extern\opencv\stitching\include;$(MsBuildProjectDirectory)\..\extern\opencv\ts\include;$(MsBuildProjectDirectory)\..\extern\opencv\video\include;$(MsBuildProjectDirectory)\..\extern\opencv\videoio\include;$(MsBuildProjectDirectory)\..\extern\opencv\world\include;$(BOOST_ROOT);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(BOOST_ROOT)/stage/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -113,10 +115,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(MsBuildProjectDirectory)\..\source;$(MsBuildProjectDirectory)\..\extern\crow\include;$(MsBuildProjectDirectory)\..\extern\opencv\_build\include;$(MsBuildProjectDirectory)\..\extern\opencv\calib3d\include;$(MsBuildProjectDirectory)\..\extern\opencv\core\include;$(MsBuildProjectDirectory)\..\extern\opencv\dnn\include;$(MsBuildProjectDirectory)\..\extern\opencv\features2d\include;$(MsBuildProjectDirectory)\..\extern\opencv\flann\include;$(MsBuildProjectDirectory)\..\extern\opencv\gapi\include;$(MsBuildProjectDirectory)\..\extern\opencv\highgui\include;$(MsBuildProjectDirectory)\..\extern\opencv\imgcodecs\include;$(MsBuildProjectDirectory)\..\extern\opencv\imgproc\include;$(MsBuildProjectDirectory)\..\extern\opencv\java\include;$(MsBuildProjectDirectory)\..\extern\opencv\js\include;$(MsBuildProjectDirectory)\..\extern\opencv\ml\include;$(MsBuildProjectDirectory)\..\extern\opencv\objc\include;$(MsBuildProjectDirectory)\..\extern\opencv\objdetect\include;$(MsBuildProjectDirectory)\..\extern\opencv\photo\include;$(MsBuildProjectDirectory)\..\extern\opencv\python\include;$(MsBuildProjectDirectory)\..\extern\opencv\stitching\include;$(MsBuildProjectDirectory)\..\extern\opencv\ts\include;$(MsBuildProjectDirectory)\..\extern\opencv\video\include;$(MsBuildProjectDirectory)\..\extern\opencv\videoio\include;$(MsBuildProjectDirectory)\..\extern\opencv\world\include;$(BOOST_ROOT);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(BOOST_ROOT)/stage/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -130,12 +134,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(MsBuildProjectDirectory)\..\source;$(MsBuildProjectDirectory)\..\extern\crow\include;$(MsBuildProjectDirectory)\..\extern\opencv\_build\include;$(MsBuildProjectDirectory)\..\extern\opencv\calib3d\include;$(MsBuildProjectDirectory)\..\extern\opencv\core\include;$(MsBuildProjectDirectory)\..\extern\opencv\dnn\include;$(MsBuildProjectDirectory)\..\extern\opencv\features2d\include;$(MsBuildProjectDirectory)\..\extern\opencv\flann\include;$(MsBuildProjectDirectory)\..\extern\opencv\gapi\include;$(MsBuildProjectDirectory)\..\extern\opencv\highgui\include;$(MsBuildProjectDirectory)\..\extern\opencv\imgcodecs\include;$(MsBuildProjectDirectory)\..\extern\opencv\imgproc\include;$(MsBuildProjectDirectory)\..\extern\opencv\java\include;$(MsBuildProjectDirectory)\..\extern\opencv\js\include;$(MsBuildProjectDirectory)\..\extern\opencv\ml\include;$(MsBuildProjectDirectory)\..\extern\opencv\objc\include;$(MsBuildProjectDirectory)\..\extern\opencv\objdetect\include;$(MsBuildProjectDirectory)\..\extern\opencv\photo\include;$(MsBuildProjectDirectory)\..\extern\opencv\python\include;$(MsBuildProjectDirectory)\..\extern\opencv\stitching\include;$(MsBuildProjectDirectory)\..\extern\opencv\ts\include;$(MsBuildProjectDirectory)\..\extern\opencv\video\include;$(MsBuildProjectDirectory)\..\extern\opencv\videoio\include;$(MsBuildProjectDirectory)\..\extern\opencv\world\include;$(BOOST_ROOT);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(BOOST_ROOT)/stage/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -149,12 +155,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(MsBuildProjectDirectory)\..\source;$(MsBuildProjectDirectory)\..\extern\crow\include;$(MsBuildProjectDirectory)\..\extern\opencv\_build\include;$(MsBuildProjectDirectory)\..\extern\opencv\calib3d\include;$(MsBuildProjectDirectory)\..\extern\opencv\core\include;$(MsBuildProjectDirectory)\..\extern\opencv\dnn\include;$(MsBuildProjectDirectory)\..\extern\opencv\features2d\include;$(MsBuildProjectDirectory)\..\extern\opencv\flann\include;$(MsBuildProjectDirectory)\..\extern\opencv\gapi\include;$(MsBuildProjectDirectory)\..\extern\opencv\highgui\include;$(MsBuildProjectDirectory)\..\extern\opencv\imgcodecs\include;$(MsBuildProjectDirectory)\..\extern\opencv\imgproc\include;$(MsBuildProjectDirectory)\..\extern\opencv\java\include;$(MsBuildProjectDirectory)\..\extern\opencv\js\include;$(MsBuildProjectDirectory)\..\extern\opencv\ml\include;$(MsBuildProjectDirectory)\..\extern\opencv\objc\include;$(MsBuildProjectDirectory)\..\extern\opencv\objdetect\include;$(MsBuildProjectDirectory)\..\extern\opencv\photo\include;$(MsBuildProjectDirectory)\..\extern\opencv\python\include;$(MsBuildProjectDirectory)\..\extern\opencv\stitching\include;$(MsBuildProjectDirectory)\..\extern\opencv\ts\include;$(MsBuildProjectDirectory)\..\extern\opencv\video\include;$(MsBuildProjectDirectory)\..\extern\opencv\videoio\include;$(MsBuildProjectDirectory)\..\extern\opencv\world\include;$(BOOST_ROOT);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(BOOST_ROOT)/stage/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
